[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Call Me Maybe - Introduction to LLM Function Calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "flake8>=7.3.0",
    "huggingface-hub>=1.7.1",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "pudb>=2025.1.5",
    "pydantic>=2.12.5",
    "regex>=2026.2.28",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
